@@ -10,7 +10,10 @@ aa_monitor changelog
 
 =item * module L<B<IOIPTV>|P9::AA::Check::IOIPTV>: new parameter B<min_byteps>, refactoring
 
-=item * module L<B<RTSP>|P9::AA::Check::RTSP>: changed DESCRIBE/SETUP/PLAY command order 
+=item * module L<B<RTSP>|P9::AA::Check::RTSP>: changed DESCRIBE/SETUP/PLAY command order
+
+=item * module L<B<HTTPSmoothStreaming>|P9::AA::Check::HTTPSmoothStreaming>: new tri state parameters:
+B<require_audio>, B<require_video>.
 
 =back
 
